--- a/pages/all-tourist-spots.html
+++ b/pages/all-tourist-spots.html
@@ -63,7 +63,7 @@
 <body>
 
 <!-- main-menu starts -->
-<header style="color:black; background-color:#4D4E54;">
+<header class="" style="color:black; background-color:#4D4E54;">
     <div class="header-area">
         <div class="container">
             <div class="row">
@@ -86,12 +86,12 @@
                         <div class="collapse navbar-collapse">
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="../index.html">home</a></li>
-                                <li><a href="./destinations.html">Destination</a></li>
-                                <li><a href="#pack">Packages </a></li>
-                                <li><a href="#spo">Special Offers</a></li>
-                                <li><a href="#blog">blog</a></li>
-                                <li><a href="#subs">subscription</a></li>
+                                <li><a href="./all-tourist-spots.html">Tourist Spots</a></li>
+                                <li><a href="nilgiri-gallery.html">gallery</a></li>
+                                <li><a href="./about-us.html">about us</a></li>
                                 <li><a href="./contact_us.html">contact</a></li>
+                                <li><a href="./faq.html">faq</a></li>
+                                <li><a href="./my-account.html">My Account</a></li>
                             </ul>
                         </div><!-- /.navbar-collapse -->
                     </div><!-- /.main-menu-->
